# plugdeck

./: .gitignore  Cargo.toml  LICENSE  README.md  docs-security.md
.github/workflows/: ci.yml
scripts/: mbx
src/: codex_reset_ledger.rs  db_migrations.rs  main.rs  modules.rs  page.css
systemd/: plugdeck.service
