[package]
name = "plugdeck"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
hex = "0.4"
mime_guess = "2"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
